--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Sekai</title>
    <head>
    <body>
+      <p> sker något nu </p>
     <h2>Lore</h2>
       <div class="dropdown_lore">
         <h3>Lore</h3>
