--- a/gods/g2.html
+++ b/gods/g2.html
@@ -8,6 +8,12 @@
         <title>AMK</title>
    <head>
    <body>
-     <p> </p>
+     <p>
+      Leisa: Goddess of the Nature
+Racu: God of Death
+Sarit: God of Justice
+Huro : God of War
+Teru : Goddess of Knowledge
+   </p>
    </body>
 </html>
