--- a/gods/g3.html
+++ b/gods/g3.html
@@ -8,6 +8,26 @@
         <title>AMK</title>
    <head>
    <body>
-     <p> </p>
+     <p>
+Alge: Goddess of Magic CG
+Teru : Goddess of Knowledge LG
+Athor: Goddess of Wisdom NG
+Perut: God of Medicine LG
+Barik: God of The Sea NG
+Neroitus : God of the Light
+Aperu : God of the Hunt
+Shevru : God of Smithing
+Peratcano: God of Craftsmanship
+
+“Neutral” Gods:
+Misha: God of Weather LN
+Feru : God of Fire
+
+
+“Evil” Gods:
+Itus: Goddess of Chaos CE
+Seruf: God of Treason and Treachery CE 
+Cheruic :God of the Desert
+Trauivas : Goddess of the Night</p> </p>
    </body>
 </html>
