--- a/gods/g2.html
+++ b/gods/g2.html
@@ -9,11 +9,16 @@
    <head>
    <body>
      <p>
+        "Good" Gods
       Leisa: Goddess of the Nature
-Racu: God of Death
-Sarit: God of Justice
-Huro : God of War
-Teru : Goddess of Knowledge
-   </p>
+      Teru : Goddess of Knowledge
+
+      "Neutral" Gods 
+        Sarit: God of Justice
+         Huro : God of War
+         "Evil" Gods
+   Racu: God of Death
+
+      </p>
    </body>
 </html>
