--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h2> Pantheon </h2>
       <div class="dropdown_gods">
         <h3>Gods</h3>
-          <div class="dropdown_konflikter-content">
+          <div class="dropdown_gods-content">
             <div><a href="gods/g1.html"> Gen 1 </a></div>
             <div><a href="gods/g2.html"> Gen 2 </a></div>
             <div><a href="gods/g3.html"> Gen 3 </a></div>
