--- a/lore/cre.html
+++ b/lore/cre.html
@@ -15,8 +15,7 @@ The farland became the start of order Nerit.
 
 When the farlands were made Order and Chaos became the first gods, by the names of Itus and Nerit. They walked the Farlands and found it empty.
 
-
-To keep everything in balance Nerit made the second generation of gods:
+But as the farlands had things previously unheard of and the void left for by the governing of everything that was would not last, the second generation of gods where made
      <br>
 Leisa: Goddess of the Nature
 Racu: God of Death
