--- a/lore/pers.html
+++ b/lore/pers.html
@@ -11,15 +11,26 @@
   <div>
     <h2> Adelsfamiljer></h2>
     Lautic (Royal), Gloomtide
+     <br>
     Sheruy, Parhu
+     <br>
     Morui, Last Light
+    <br>
     Autritic, Urthil
-    Untua, Neigne
+    <br>
+     Untua, Neigne
+    <br>
     Smraut, Mirthau
+    <br>
 
+    <br>
     Elearc, Del Irakh
+    <br>
     Neumi, Deermore
+    <br>
     Ortua, Eaglegrove
+    <br>
+     (Mearaukia, Ryuski)
   </div>
    </body>
 </html>
