--- a/gods/g1.html
+++ b/gods/g1.html
@@ -11,11 +11,21 @@
      <p>
       “Good” Gods:
         <br>
-Nerit: God of Order LG
-<br>
-“Evil” Gods:
+   Nerit: God of Order LG
         <br>
-Itus: Goddess of Chaos CE
+        Symbol: 
+        <br>
+         2 cirklar, 1 vars diameter är hälften av den större, sammanbunden av ett sträck, utom igenom den mindres diameter
+
+        <br>
+        “Evil” Gods:
+        <br>
+        Itus: Goddess of Chaos CE
+        <br>
+        Symbol:
+        <br>
+        Pentagon
+
 </p>
    </body>
 </html>
