--- a/gods/g2.html
+++ b/gods/g2.html
@@ -10,20 +10,60 @@
    <body>
      <p>
         "Good" Gods
-      Leisa: Goddess of the Nature 
+        Leisa: Goddess of the Nature 
         <br>
-      Teru : Goddess of Knowledge
+        Symbol:
         <br>
-      "Neutral" Gods 
+        Björklöv
         <br>
-       Sarit: God of Justice
+        Heligt växt/djur:
+        <br>
+        Olivträd
+        <br>
+        Teru : Goddess of Knowledge
+        <br>
+        Symbol:
+        <br>
+        Ett öppet öga
+        <br>
+        Heligt växt/djur:
+        <br>
+        Delfin
+        <br>
+
+       "Neutral" Gods 
+        <br>
+        Sarit: God of Justice
+        Symbol:
+        <br>
+        Vågen
+        <br>
+        Heligt växt/djur:
+        <br>
+        Sköldpaddan
         <br>
         Huro : God of War        
-       <br>
+        <br>
+        Symbol:
+        <br>
+        Svärd och sköld, korsade
+        <br>
+        Heligt växt/djur:
+        <br>
+        Lejon
+        <br>
         "Evil" Gods
         <br>
-         Racu: God of Death
+        Racu: God of Death
         <br>
+        Symbol:
+        <br>
+        Ett litet r
+        <br>
+        Heligt växt/djur:
+        <bt>
+Svampel
+
       </p>
    </body>
 </html>
