--- a/gods/g3.html
+++ b/gods/g3.html
@@ -10,6 +10,11 @@
    <body>
      <p>
 Alge: Goddess of Magic CG
+        Symbol:
+A falling star
+Heligt växt/djur:
+Kollibri
+
 Teru : Goddess of Knowledge LG
 Athor: Goddess of Wisdom NG
 Perut: God of Medicine LG
