--- a/gods/g3.html
+++ b/gods/g3.html
@@ -9,30 +9,140 @@
    <head>
    <body>
      <p>
-Alge: Goddess of Magic CG
+        Alge: Goddess of Magic CG
         Symbol:
-A falling star
-Heligt växt/djur:
-Kollibri
+        <br>
+        A falling star
+        <br>
+        Heligt växt/djur:
+        <br>
+        Kollibri
+        <br>
+        Athor: Goddess of Wisdom NG
+        Symbol:
+        <br>
+        En ljuslåga
+        <br>
+        Heligt växt/djur:
+        <br>
+        Uggla
+        <br>
+        Perut: God of Medicine LG
+        <br>
+        Symbol:
+        <br>
+        En stav med en orm som slingrar runt sig (ja snott av grekisk mytologi, stäm mig)
+        <br>
+        Heligt växt/djur:
+        <br>
+        Orm
+        <br>
 
-Teru : Goddess of Knowledge LG
-Athor: Goddess of Wisdom NG
-Perut: God of Medicine LG
-Barik: God of The Sea NG
-Neroitus : God of the Light
-Aperu : God of the Hunt
-Shevru : God of Smithing
-Peratcano: God of Craftsmanship
+        Barik: God of The Sea NG
+        <br>
+        Symbol:
+        <br>
+        Fiskekrok, format som ett “J”
+        <br>
+        Heligt växt/djur:
+        <br>
+        Stingrocka
+        <br>
+        Neroitus : God of the Light
+        <br>
+        Symbol:
+        <br>
+        En 3 armad ljusstake
+        <br>
+        Heligt växt/djur:
+        <br>
+        Eldfluga
+        <br>
+        Aperu : God of the Hunt
+        <br>
+        Symbol:
+        <br>
+        Pilbåge och Pil, Korsade som ett X
+        <br>
+        Heligt växt/djur:
+        <br>
+        Varg
+        <br>
+        Shevru : God of Smithing
+        <br>
+        Symbol:
+        <br>
+        Städ
+        <br>
+        Heligt växt/djur:
+        <br>
+        Azer
+        <br>
+        Peratcano: God of Craftsmanship
+        <br>
+        Symbol:
+        <br>
+        Hammare, (ej warhammer)
+        <br>
+        Heligt växt/djur:
+        <br>
+        Myror
+        <br>
+        “Neutral” Gods:
+        <br>
+        Misha: God of Weather LN
+        <br>
+        Symbol:
+        <br>
+        Tre lodräta streck
+        <br>
+        Heligt växt/djur:
+        <br>
+        Pligrimsfalk
+        <br>
+        Feru : God of Fire
+        <br>
+        Symbol:
+        <br>
+        En cirkel med en punkt i mitten
+        <br>
+        Heligt växt/djur:
+        <br>
+        Röd drake
+        <br>
+        “Evil” Gods:
+        <br>
+        Seruf: God of Treason and Treachery CE 
+        <br>
+        Symbol:
+        <br>
+        En liksidig triangel med ett streck från en av hörnen som bildar en rät vinkel med motstående sida
+        <br>
+        Heligt växt/djur:
+        <br>
+        Räv
+        <br>
 
-“Neutral” Gods:
-Misha: God of Weather LN
-Feru : God of Fire
+        Cheruic :God of the Desert
+        <br>
+        Heligt växt/djur:
+        <br>
+        Sträck med Cirkel ovanför
+        <br>
+        Heligt växt/djur:
+        <br>
+        Kamel
+        <br>
+        Trauivas : Goddess of the Night
+        <br>
+        Symbol:
+        <br>
+        Cirkel med sträck ifrån omkretsen som går inått
+        <br>
+        Heligt växt/djur:
+        <br>
+        Katt
 
-
-“Evil” Gods:
-Itus: Goddess of Chaos CE
-Seruf: God of Treason and Treachery CE 
-Cheruic :God of the Desert
-Trauivas : Goddess of the Night</p> </p>
+      </p>
    </body>
 </html>
