--- a/gods/g1.html
+++ b/gods/g1.html
@@ -1,7 +1,7 @@
 <html lang="eng">
    <head>
-       <link rel="stylesheet" type="text/css" href="css/style.css">
-       <link rel="stylesheet" type="text/css" href="css/grid.css">
+       <link rel="stylesheet" type="text/css" href="../css/style.css">
+       <link rel="stylesheet" type="text/css" href="../css/grid.css">
         <meta charset=utf-8>
         <meta name=”viewport” content=”width-device width, initial-scale=1.0”>
 
