--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div> <a href="lore/cre.html"> Creation </a> </div>
             <div> <a href="lore/exc.html"> Excluars </a> </div>
             <div> <a href="lore/pers.html"> Viktiga personer </a></div>
+             <div> <a href="lore/adelsfamiljer.html"> Adelsfamiljer </a> </div>
           </div>
       </div>
       <br>
