--- a/lore/adelsfamiljer.html
+++ b/lore/adelsfamiljer.html
@@ -31,6 +31,13 @@
     Ortua, Eaglegrove
     <br>
      (Mearaukia, Ryuski)
+     
+     <h3> Previous History </h2>
+     Den första kungliga familjen var House Meraukia, enligt legenden ska endast deras blod kunna använda exulars sanna kraft, men efter några hundra år blev de tyrraniska, deras sista kung Mareuk Den Grymme, hans sista försök att behålla makten var att gifta bort hans dotter, Vealen, till det näst mäktigaste huset, Lautic. Hans livs största misstag. Vealen, hatade sin far lika mycket som alla andra. Tillsammans med sin man, (som senare blev Lautics första kung) Seoru Lautic (senare Seoru den vise), ledde de en revolt som de resten av familjerna senare följde. Mot slutet av kriget var House Meraukia näst intill utrotat, (dock ska enligt folksägner vissa ha överlevt i hemlighet). I och med deras kungliga blod blev House Lautic nästa kungliga familj, ifall något senare skulle ske,för något annat hus att ta makten vore oerhört kortsigtigt, alltså gick övriga hus med på detta. Kriget är känt som Perte de Merau. 
+     <br>
+     Men eftersom folket ansåg Meraukia som näst intill heliga kom snart en andra revolt efter den första. Denna blev senare känd som The Second Hethen Revolt.
+
+     
   </div>
    </body>
 </html>
