--- a/lore/adelsfamiljer.html
+++ b/lore/adelsfamiljer.html
@@ -9,7 +9,7 @@
    <head>
    <body>
   <div>
-    <h2> Adelsfamiljer></h2>
+    <h2> Adelsfamiljer</h2>
     Lautic (Royal), Gloomtide
      <br>
     Sheruy, Parhu
