--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3>Lore</h3>
           <div class="dropdown_lore-content">
             <div> <a href="lore/cre.html"> Creation </a> </div>
-            <div> <a href="lore/exc.html"> Excluars </a> </div>
+            <div> <a href="lore/obj.html"> Viktiga föremål </a> </div>
             <div> <a href="lore/pers.html"> Viktiga personer </a></div>
              <div> <a href="lore/adelsfamiljer.html"> Adelsfamiljer </a> </div>
           </div>
