Update and rename exc.html to obj.html

--- a/lore/obj.html
+++ b/lore/obj.html
@@ -6,7 +6,7 @@
         <meta charset=utf-8>
         <meta name=”viewport” content=”width-device width, initial-scale=1.0”>
 
-        <title>Exulars</title>
+        <title>Viktiga föremål</title>
    <head>
    <body>
      <div class="cursiv"> 3* of them dragons, to make the balance clear
