--- a/lore/obj.html
+++ b/lore/obj.html
@@ -11,6 +11,7 @@
    <body>
      <div class="cursiv"> 3* of them dragons, to make the balance clear
 <br>
+        <h3 class="fet"> Exculars </h3>          
 1 of a temple so all the gods could hear
 <br>
 1 one of them a griamore the greatest of its kind
@@ -18,6 +19,42 @@
 The last one a regalia so the magic could be bind
 <br>
 *En platiunum, en 5 hövdad och en gem/crystal
+        <h3 class="fet">  Mouv </h3>
+        <br>
+        <br>
+        De tolv svärd smidda av <span class="fet"> Shevru </span>
+        <br>
+        <br>
+        10 av dessa gavs till adelsfamiljerna i Sekai.
+        Listade nedan:
+        <span class="fet"> Andil </span>, gavs till familjen <span class="fet"> Elerac </span>
+        <br>
+        <br>
+        <span class="fet"> Meras </span>, gavs till familjen <span class="fet"> familjen Neumi </span>
+        <br>
+        <br>
+        <span class="fet"> Larec </span> gavs till familjen <span class="fet"> Ortua </span>
+        <br>
+        <br>
+        <span class="fet"> Greysong </span> gavs till familjen  <span class="fet"> Mearaukia <span>
+        <br>
+        <br>
+        <span class="fet"> Fyre </span> gavs till familjen <span class="fet"> Lautic </span>
+        <br>
+        <br>
+        <span class="fet"> Adres </span> gavs till familjem <span class="fet"> Sheruy </span> 
+        <br>
+        <br>
+        <span class="fet"> Edro </span> gavs till familjen <span class="fet"> Moroi </span>
+        <br>
+        <br>
+        <span class="fet"> Semi </span> gavs till familjen <span class="fet"> Autritic </span>
+        <br>
+        <br>
+        <span class="fet"> Oderic </span> gavs till familjen <span class="fet"> Untua </span>
+        <br>
+        <br>
+        <span class="fet"> Hadry </span> gavs till familjen <span class="fet"> Smraut </span>
 </div>
    </body>
 </html>
