--- a/lore/adelsfamiljer.html
+++ b/lore/adelsfamiljer.html
@@ -39,7 +39,9 @@
      <br>
      Dock var inte detta på något sätt det ända som skedde under deras regim, den fjärde kungen, <span class="fet"> Parekh den oädle </span> , var välkänd för sina, affärer, utanför äktenskapet, ledande till en stor mängd bastards födda med hans blod. En av dessa, <span class="fet"> Liric </span>, senare <span class="fet"> Liric Greysong </span>, blev välkänd för sin svärdkonst till den grad att <span class="fet"> Parekh </span> gav familjens <span class="fet"> Mouv </span> isället för sin arvinge, eller famljen bästa sannfödde svärdkämpe, vilket var tradition framtills detta och har varit så sedan efter. Vid sin död stod i hans testamente att alla hans bastards blev deklaerade äkta <span class="fet"> Meraukia </span>. Efter hans död tog hans äldsta son över tronen. Men <span class="fet"> Liric </span> ansåg att tronen var rättmättigt hans iochmed att han fått familjens <span class="fet"> Mouv </span>. Detta lädde till ett succetionskrig känd som Greysong revolten. <span class="fet"> Liric Greysong </span> förlorade och blev avrättad. Hans familj flydde dock till Kuniöarna, och tog med sig <span class="fet"> Greysong </span> familjens <span class="fet"> Mouv </span>. Sedan denna dag blev familjen känd som <span class="fet"> Greysong </span> och inte <span class="fet"> 
      Meraukia </span>. De har aldrig återvänt till Sekai och har i stort sätt fallit i glömska.
-     Men eftersom folket ansåg Meraukia som näst intill heliga kom snart en andra revolt efter den första. Denna blev senare känd som The Second Hethen Revolt.
+     <br>
+     <br>
+     Efter familjen <span class="fet" > Meraukia </span> avsattes trodde man att det skulle bli fred på Sekai. Men så blev det inte alls, eftersom folket ansåg Meraukia som näst intill heliga kom snart en andra revolt efter den första. Denna blev senare känd som The Second Hethen Revolt.
 
      
   </div>
