--- a/lore/obj.html
+++ b/lore/obj.html
@@ -55,6 +55,12 @@ The last one a regalia so the magic could be bind
         <br>
         <br>
         <span class="fet"> Hadry </span> gavs till familjen <span class="fet"> Smraut </span>
-</div>
+        <br>
+        <br>
+        Men detta är bara 10 av de tolv, 1 gavs till Sekai som kontinent, medad att gå till den renhjärtade och mäktigaste krigaren på hela kontinenten. Det har varit en lång tid sedan svärdet valde en användare och befinner sig nu i tronsalen i Ryuski, fungerade som en symbol för kungafamiljen. Även om den inte tillhör dem är det famljen <span class="fet"> Lautic </span> som förvarar denna. Denna <span class="fet"> Mouv </span> är känd som <span class="fet"> Sundown </span> (eftersom solen går ned i väst och Sekai är den västra kontinenten) och är ett kolsvart longsword.  
+        <br>
+        <br>
+        Den sista gavs till Kuniöarna, med samma princip som <span class="fet"> Sundown </span>. Denna blev känd som <span class="fet"> Dawn </span> och är en vit katana. Att <span class="fet"> Dawn </span> finns är ett skäl till att katanas är mycket vanligare i Kuniöarna än säg longswords är, medan de knappt används alls i Sekai.
+        </div>
    </body>
 </html>
