--- a/gods/g2.html
+++ b/gods/g2.html
@@ -8,62 +8,87 @@
         <title>AMK</title>
    <head>
    <body>
-     <p>
+     <div>
         "Good" Gods
         Leisa: Goddess of the Nature 
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         Björklöv
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Olivträd
         <br>
+        <br>
         Teru : Goddess of Knowledge
+        <br>
         <br>
         Symbol:
         <br>
+        <br>
         Ett öppet öga
+        <br>
         <br>
         Heligt växt/djur:
         <br>
+        <br>
         Delfin
+        <br>
         <br>
 
        "Neutral" Gods 
         <br>
+        <br>
         Sarit: God of Justice
         Symbol:
         <br>
+        <br>
         Vågen
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Sköldpaddan
         <br>
+        <br>
         Huro : God of War        
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         Svärd och sköld, korsade
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Lejon
         <br>
+        <br>
         "Evil" Gods
+        <br>
         <br>
         Racu: God of Death
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         Ett litet r
         <br>
+        <br>
         Heligt växt/djur:
         <bt>
-Svampel
-
-      </p>
+        <br>
+        Svampen
+        <br>
+      </div
    </body>
 </html>
