--- a/gods/g3.html
+++ b/gods/g3.html
@@ -8,141 +8,206 @@
         <title>AMK</title>
    <head>
    <body>
-     <p>
+     <div>
         Alge: Goddess of Magic CG
+        <br>
+        <br>
         Symbol:
+        <br>
         <br>
         A falling star
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Kollibri
         <br>
+        <br>
         Athor: Goddess of Wisdom NG
+        <br>
+        <br>
         Symbol:
+        <br>
         <br>
         En ljuslåga
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Uggla
         <br>
+        <br>
         Perut: God of Medicine LG
+        <br>
         <br>
         Symbol:
         <br>
-        En stav med en orm som slingrar runt sig (ja snott av grekisk mytologi, stäm mig)
+        <br>
+        En stav med en orm som slingrar runt sig (ja snott av egyptisk mytologi, stäm mig)
+        <br>
         <br>
         Heligt växt/djur:
+        <br>
         <br>
         Orm
         <br>
-
+        <br>
         Barik: God of The Sea NG
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         Fiskekrok, format som ett “J”
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Stingrocka
         <br>
+        <br>
         Neroitus : God of the Light
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         En 3 armad ljusstake
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Eldfluga
         <br>
+        <br>
         Aperu : God of the Hunt
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         Pilbåge och Pil, Korsade som ett X
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Varg
         <br>
+        <br>
         Shevru : God of Smithing
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         Städ
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Azer
         <br>
+        <br>
         Peratcano: God of Craftsmanship
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         Hammare, (ej warhammer)
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Myror
         <br>
+        <br>
         “Neutral” Gods:
+        <br>
         <br>
         Misha: God of Weather LN
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         Tre lodräta streck
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Pligrimsfalk
         <br>
+        <br>
         Feru : God of Fire
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         En cirkel med en punkt i mitten
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Röd drake
         <br>
+        <br>
         “Evil” Gods:
+        <br>
         <br>
         Seruf: God of Treason and Treachery CE 
         <br>
+        <br>
         Symbol:
+        <br>
         <br>
         En liksidig triangel med ett streck från en av hörnen som bildar en rät vinkel med motstående sida
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Räv
         <br>
-
+        <br>
         Cheruic :God of the Desert
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Sträck med Cirkel ovanför
         <br>
+        <br>
         Heligt växt/djur:
+        <br>
         <br>
         Kamel
         <br>
+        <br>
         Trauivas : Goddess of the Night
+        <br>
         <br>
         Symbol:
         <br>
+        <br>
         Cirkel med sträck ifrån omkretsen som går inått
+        <br>
         <br>
         Heligt växt/djur:
         <br>
+        <br>
         Katt
-
-      </p>
+      </div>
    </body>
 </html>
