--- a/gods/g1.html
+++ b/gods/g1.html
@@ -5,11 +5,12 @@
         <meta charset=utf-8>
         <meta name=”viewport” content=”width-device width, initial-scale=1.0”>
 
-        <title>AMK</title>
+        <title>Gods Gen 1</title>
    <head>
    <body>
      <p>
       “Good” Gods:
+        <br>
         <br>
    Nerit: God of Order LG
         <br>
