--- a/lore/pers.html
+++ b/lore/pers.html
@@ -10,7 +10,25 @@
    <body>
   <div>
     <h2> Viktiga NPCs></h2>
-     
+     Portekh Lautic, nuvarande kung av Nerou. Har tre yngre bröder, två av dem ska delta i Wargames
+<br>
+<br>
+     Adam Sirg, nuvarande högsta rådgivare till kungen, (tänk hand of the King GoT), har en son som deltar i Wargames
+ <br>
+ <br>
+     Snae Elaerac, äldsta son till Louc Elaerac, sågs senast vid slaget vid Dol Mortis.
+  <br>
+  <br>
+     Sam Elarac näst äldsta son till Louc. Nuvarande ledare för house Elarac.
+  <br>
+  <br>
+     Pourekhnu, Platinum dragon, Exulars
+  <br>
+  <br>
+     Velag, fler hövdad dragon, Exulars
+  <br>
+  <br> 
+     Cheraux, cristal dragon, Exulars, för stunden en dracolich.
   </div>
    </body>
 </html>
