--- a/lore/pers.html
+++ b/lore/pers.html
@@ -10,7 +10,11 @@
    <body>
   <div>
     <h2> Viktiga NPCs></h2>
+     Alla dessa är möjliga gissningar för Masqurade
+     <br>
+     <br>
      Portekh Lautic, nuvarande kung av Nerou. Har tre yngre bröder, två av dem ska delta i Wargames
+     <img 
 <br>
 <br>
      Adam Sirg, nuvarande högsta rådgivare till kungen, (tänk hand of the King GoT), har en son som deltar i Wargames
