--- a/lore/pers.html
+++ b/lore/pers.html
@@ -10,20 +10,25 @@
    <body>
   <div>
     <h2> Viktiga NPCs></h2>
-     Alla dessa är möjliga gissningar för Masqurade
+     Alla dessa är möjliga gissningar för Masqurade, and dont question diffrent artstyles for these pictures, that is not the point of this.
      <br>
      <br>
      Portekh Lautic, nuvarande kung av Nerou. Har tre yngre bröder, två av dem ska delta i Wargames
-     <img 
+     <img scr="../img/king.webp" class="mas"> 
 <br>
 <br>
      Adam Sirg, nuvarande högsta rådgivare till kungen, (tänk hand of the King GoT), har en son som deltar i Wargames
+     <img scr="../img/advisor.jpg" class="mas"> 
+
  <br>
  <br>
      Snae Elaerac, äldsta son till Louc Elaerac, sågs senast vid slaget vid Dol Mortis.
+     <img scr="../img/lichking.jpg" class="mas"> 
   <br>
   <br>
      Sam Elarac näst äldsta son till Louc. Nuvarande ledare för house Elarac.
+    <img scr="../img/elven_lord.jpg" class="mas"> 
+
   <br>
   <br>
      Pourekhnu, Platinum dragon, Exulars
