--- a/lore/art.html
+++ b/lore/art.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="eng">
+   <head>
+       <link rel="stylesheet" type="text/css" href="../css/style.css">
+       <link rel="stylesheet" type="text/css" href="../css/grid.css">
+        <meta charset=utf-8>
+        <meta name=”viewport” content=”width-device width, initial-scale=1.0”>
+
+        <title>art</title>
+   </head>
+   <body>
+  <div>
 Artivers
 Exakt vad Artives är osäkert, hur länge de levde eller ens när de levde än mindre när de dog ut. Vad som vets är att de är oerhört teknologiskt avancerade och fanns här före, människor, alver, dvärgar osv. Om de skapades här eller kom ifrån ett annat plane är också osäkert. Men vi var inte alls först här, så mycket är säkert.
 
@@ -6,3 +18,5 @@ Många spekuleringar finns, den ena värre än den andra. Vissa säger att de va
 Man misstänker att de levde under marken, eller det är åtminstone vad bevisen pekar på. Majoriteten av alla spår man hittade har varit i grottor, eller underjordiska strukturer stora som slott. Bara en sådan kan ta ett årtionde att studera innan man är ens i närheten att hitta mer än en liten andel av alla hemligheter som döljs där. Om föremål hittades i ruinerna placeras finns de ofta därefter nära till hands till artificers (ordet kommer ifrån artivers) eller andra akademisk intresserade människor. Som hos en archmage exempelvis. Många innovationer har kommit just från detta. Krut exempelvis, skapandet av brons kom ifrån legeringar sedda i ruinerna. Dock är många av metoderna lånade från Artivers antingen inkompletta eller svår utförda. Det finns skäl till att den genomsnittlige bonden inte har verktyg av brons.
 
 En intressant fakta om dem är att så vitt artificers kan avgöra ägnade sig inte åt magi eller gudsdyrkan. Även om det finns bevis för att de kände till varelser av gudomlig nivå blev dessa aldrig dyrkade. Ett av bara många mysterier som dykt upp vid närmare undersökning
+ </div>
+  </body>
