--- a/lore/obj.html
+++ b/lore/obj.html
@@ -7,7 +7,7 @@
         <meta name=”viewport” content=”width-device width, initial-scale=1.0”>
 
         <title>Viktiga föremål</title>
-   <head>
+   </head>
    <body>
      <div class="cursiv"> 3* of them dragons, to make the balance clear
 <br>
