--- a/lore/pers.html
+++ b/lore/pers.html
@@ -6,7 +6,7 @@
         <meta name=”viewport” content=”width-device width, initial-scale=1.0”>
 
         <title>VINPC</title>
-   <head>
+   </head>
    <body>
   <div>
     <h2> Viktiga NPCs></h2>
