--- a/lore/art.html
+++ b/lore/art.html
@@ -20,3 +20,4 @@ Man misstänker att de levde under marken, eller det är åtminstone vad bevisen
 En intressant fakta om dem är att så vitt artificers kan avgöra ägnade sig inte åt magi eller gudsdyrkan. Även om det finns bevis för att de kände till varelser av gudomlig nivå blev dessa aldrig dyrkade. Ett av bara många mysterier som dykt upp vid närmare undersökning
  </div>
   </body>
+</html>
