--- a/lore/art.html
+++ b/lore/art.html
@@ -10,7 +10,7 @@
    </head>
    <body>
   <div>
-Artivers
+        <h3 class="fet">  Artivers </h3>
 Exakt vad Artives är osäkert, hur länge de levde eller ens när de levde än mindre när de dog ut. Vad som vets är att de är oerhört teknologiskt avancerade och fanns här före, människor, alver, dvärgar osv. Om de skapades här eller kom ifrån ett annat plane är också osäkert. Men vi var inte alls först här, så mycket är säkert.
 
 Många spekuleringar finns, den ena värre än den andra. Vissa säger att de var höga som hus, gjorda av metall och inte födda men skapta. Andra argumenterar att de var känsliga till solljus vilket är varför de levde under jorden. Vissa tror även att de bara är en exotisk form av dvärg, som av okänd anledning dog ut, med nuvarande dvärgars härkomst var från början Artives. Inget är tydligt, och sanningen är som att leta efter en nål i ett höstack 
