--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div> <a href="lore/cre.html"> Creation </a> </div>
             <div> <a href="lore/obj.html"> Viktiga föremål </a> </div>
             <div> <a href="lore/pers.html"> Viktiga personer </a></div>
-             <div> <a href="lore/adelsfamiljer.html"> Adelsfamiljer </a> </div>
+            <div> <a href="lore/adelsfamiljer.html"> Adelsfamiljer </a> </div>
+            <div> <a href="lore/art.html"> Artivers </a> </div>
+
           </div>
       </div>
       <br>
