--- a/lore/art.html
+++ b/lore/art.html
@@ -21,6 +21,10 @@ Många spekuleringar finns, den ena värre än den andra. Vissa säger att de va
      <br>
 Man misstänker att de levde under marken, eller det är åtminstone vad bevisen pekar på. Majoriteten av alla spår man hittade har varit i grottor, eller underjordiska strukturer stora som slott. Bara en sådan kan ta ett årtionde att studera innan man är ens i närheten att hitta mer än en liten andel av alla hemligheter som döljs där. Om föremål hittades i ruinerna placeras finns de ofta därefter nära till hands till artificers (ordet kommer ifrån artivers) eller andra akademisk intresserade människor. Som hos en archmage exempelvis. Många innovationer har kommit just från detta. Krut exempelvis, skapandet av brons kom ifrån legeringar sedda i ruinerna. Dock är många av metoderna lånade från Artivers antingen inkompletta eller svår utförda. Det finns skäl till att den genomsnittlige bonden inte har verktyg av brons.
      <br>
+     <br
+Men det mest udda med Artivers är grottorna som de kommer ifrån verkar komma och gå, de verkar inte statiska, vilket har fått vissa att tro att det fortfarande finns artivers levande, medan andra spekulerar att det är något form av geologiskt fenomen. Vad som är säkert är dock är att grottorna eller de undergjordiska salarna rör på sig, som någon form av jättelik labyrint, vilket gör att om något sker med ett område med spår av Artivers är det krisisk att göra något åt saken, innan det är för sent 
+
+     <br>    
      <br>
 En intressant fakta om dem är att så vitt artificers kan avgöra ägnade sig inte åt magi eller gudsdyrkan. Även om det finns bevis för att de kände till varelser av gudomlig nivå blev dessa aldrig dyrkade. Ett av bara många mysterier som dykt upp vid närmare undersökning
  </div>
