--- a/gods/g3.html
+++ b/gods/g3.html
@@ -162,6 +162,21 @@
         Röd drake
         <br>
         <br>
+        Chro: God of time
+        <br>
+        <br>
+        Symbol:
+        <br>
+        <br>
+        Tidsglas
+        <br>
+        <br> 
+        Djur:
+        <br>
+        <br>
+        n/a
+        <br>
+        <br>
         “Evil” Gods:
         <br>
         <br>
