--- a/gods/g3.html
+++ b/gods/g3.html
@@ -176,6 +176,21 @@
         <br>
         n/a
         <br>
+        <br> 
+        Va: Goddess of snow and ice
+        <br>
+        <br>
+        Symbol:
+        <br>
+        <br>
+        Hexagon (för snöflingor har 6 sidor)
+        <br>
+        <br> 
+        Djur:
+        <br>
+        <br>
+        Isbjörn
+        <br>
         <br>
         “Evil” Gods:
         <br>
