--- a/lore/adelsfamiljer.html
+++ b/lore/adelsfamiljer.html
@@ -12,17 +12,39 @@
     <h2> Adelsfamiljer</h2>
     Lautic (Royal), Gloomtide
      <br>
-    Sheruy, Parhu
+     <br>
+En ambitiös familj, sedan de blev den kungliga familjen har de sökt andra former av erövrning eller metoder att framstå som mäktiga än krigsföring. Det var under deras ledning som mycket av den senare architekturen skapades. Exempelvis fanns endast magiskolan i huvudstaden innan de tog över. Efteråt byggdes magiskolor i Urthil, Del Irakh. Dock är den i huvudstaden den mest kända. Det kan dock argumenteras vilken som är bäst, Elearcs metodiska sätt att leda undervisningen låter dem kompensera för huvudstadens rikedom. Deras ledande av Sekai (kontinent och landet) har lett till mycket välstånd och ett flertal kungar har varit älskade av folk och adeln., dock har Gloomtide förklarat ganska många konflikter mot underdark. Förmodligen för att bli kända som familjen som återfann Lithauri (exular). Inget tur så här långt.
+     <br>
+     <br>
+     Sheruy, Parhu
+     <br>
+     <br>
+     En lugn och stillsam familj, sedan Deermore gick i revolt har Parhu och i förlängingen Sheruy stått för majoriteten av kontinentens växtproduktion med dess stora fruktträdgårdar. Även majoriteten av kontinentens träd, papper producerat. De har länge varit lojala mot kronan ochmed deras motvillighet till snabba förändringar, ett skäl till att de specialiserar med odling. I Parhu finns även den enda större gruppen elfs eller half-elf utanför kontinentens nord östra del. Kontinentens största biblotek finns även här, där en majoritet av landets historia sparats
+     <br>
      <br>
     Morui, Last Light
     <br>
+    <br>
+    Också en relatives ambitiös familj familj som långsamt glömmer dåtiden, under tiden mellan FMK och AMK var de den enda familjen som förbredde inför Seuris återkomst, och det var emot deras rekommendation  som Dol Ithil övergavs. De har även kontinentens enda stad som har en faktiskt stor krigsför bredd flotta.
+    <br>
+    <br>
     Autritic, Urthil
     <br>
-     Untua, Neigne
     <br>
-    Smraut, Mirthau
+    Autric har ganska länge varit självförsörjande, med en inhemsk fiskproduktion och begränsad odling och närhet till metaller i den närliggande bergskedjan har de under lång tid varit redo att hantera krissituationer. Vilket de har behövt iochmed att det inte finns något anpassad hamn på andra sidan sjön, och träsket samt bergskedjan har gjort dem svåra att komma åt till fots och deras isolerade livstil ledde under lång tid till att staden var mer eller mindre obesökt. Sedan en av kontinentens 3 magiskolor konstruerades i Staden har den fått alltmer uppmärksamhet. Dock har staden ingen riktig miitär, eller sätt mycket stridigheter, så trots att staden kanske är den som skulle kunna vara bäst förbredd för en belägring, är den långt ifrån bäst förbredd nu.
     <br>
-
+    <br>
+    Untua, Neigne
+    <br>
+    <br>
+    Neigne är enda staden i ett arktiskt liknande förhållande, orsakad av en kall havström som kommer in ifrån västerut, i samband med att Mons är kontinentens högsta berg har ledt till att detta område har en konstant permafrost. Konstligt nog är området söderut helt bördigt mark, ett klimat fenomen som hittils är oförklarat. Neigne är enda staden där Gudinnan Va är helgad. Något som har ledt till att de har som vanlig begravningsritual att offra kroppen i den så kallade Ice cave, en grotta i Mons, kontinentens kallaste plats. Neignes grundare har sin grav bara några hundra meter ifrån Neigne, Ben Untua, det är en vanlig avrättningsmetod att skicka ut den dömde till graven utan utrustning för att skydda mot kylan, att nå graven sägs ge tillbaka den döende sin ära samt ger dem en sista chans att bevisa sig.. Av de tusentalet som avrättats på detta sättet har endast 3 nått graven. Majoriteten klarade sig endast ett tiotal meter, endast de som nådde graven tilläts begravas där, övriga placeras i Ice cave.
+    <br>
+    <br>
+     Smraut, Mirthau
+    <br>
+    <br>
+    Smraut är enda familjen sommer eller mindre endast består av dvärgar. Området Mirthau är belägen i är det mest mineralrika området på kontinenten, vilket har gjort staden till den näst rikaste efter huvudstaden. Även om alla städe har smeder är det dem i Mirthau som anses bäst, och det är inte ovanligt att smedlärningar skickas till staden för att lära sig. Dock är det endast de med mest naturlig talang som får lära sig dvärgarnas tekniker. Enligt vissa har dvärgarna hittat en metod för att ta värme av en inaktiv vulkan för att värma deras smedjor, detta är dock bara spekulationer, dock är vulkanen riktig och en plats har används för att begrava familjen Smraut under många generationer
+    <br>
     <br>
     Elearc, Del Irakh
     <br>
