--- a/lore/adelsfamiljer.html
+++ b/lore/adelsfamiljer.html
@@ -13,7 +13,7 @@
     Lautic (Royal), Gloomtide
      <br>
      <br>
-En ambitiös familj, sedan de blev den kungliga familjen har de sökt andra former av erövrning eller metoder att framstå som mäktiga än krigsföring. Det var under deras ledning som mycket av den senare architekturen skapades. Exempelvis fanns endast magiskolan i huvudstaden innan de tog över. Efteråt byggdes magiskolor i Urthil, Del Irakh. Dock är den i huvudstaden den mest kända. Det kan dock argumenteras vilken som är bäst, Elearcs metodiska sätt att leda undervisningen låter dem kompensera för huvudstadens rikedom. Deras ledande av Sekai (kontinent och landet) har lett till mycket välstånd och ett flertal kungar har varit älskade av folk och adeln., dock har Gloomtide förklarat ganska många konflikter mot underdark. Förmodligen för att bli kända som familjen som återfann Lithauri (exular). Inget tur så här långt.
+En ambitiös familj, sedan de blev den kungliga familjen har de sökt andra former av erövrning eller metoder att framstå som mäktiga än krigsföring. Det var under deras ledning som mycket av den senare architekturen skapades. Exempelvis fanns endast magiskolan i huvudstaden innan de tog över. Efteråt byggdes magiskolor i Urthil, Del Irakh. Dock är den i huvudstaden den mest kända. Det kan dock argumenteras vilken som är bäst, Elearcs metodiska sätt att leda undervisningen låter dem kompensera för huvudstadens rikedom. Deras ledande av Nerau (kontinent och landet) har lett till mycket välstånd och ett flertal kungar har varit älskade av folk och adeln., dock har Gloomtide förklarat ganska många konflikter mot underdark. Förmodligen för att bli kända som familjen som återfann Lithauri (exular). Inget tur så här långt.
      <br>
      <br>
      Sheruy, Parhu
