--- a/lore/obj.html
+++ b/lore/obj.html
@@ -63,6 +63,10 @@ The last one a regalia so the magic could be bind
         <br>
         <br>
         Den sista gavs till Kuniöarna, med samma princip som <span class="fet"> Sundown </span>. Denna blev känd som <span class="fet"> Dawn </span> och är en vit katana. Att <span class="fet"> Dawn </span> finns är ett skäl till att katanas är mycket vanligare i Kuniöarna än säg longswords är, medan de knappt används alls i Sekai.
+        <br>
+        <br>
+        Dessa tillsammans med exular regalian är de enda föremålen av admantine på hela sekai
+
         </div>
    </body>
 </html>
