--- a/index.html
+++ b/index.html
@@ -44,5 +44,11 @@
       </div>
       <h2> Map </h2>
       <a href="https://inkarnate.com/m/E53lpL-sekai/"> <img src="img/map.webp"> </a>
+   <br>
+   <br>
+   <br>
+   <br>      
+      <a href="https://inkarnate.com/m/LmvzRz-nerau//"> <img src="img/nerau.jpg"> </a>
+
    </body>
 </html>
