--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    <br>
    <br>
    <br>      
-      <a href="https://inkarnate.com/m/LmvzRz-nerau//"> <img src="img/nerau.jpg"> </a>
+      <a href="https://inkarnate.com/m/LmvzRz-nerau//"> <img src="img/Nerau.jpg"> </a>
 
    </body>
 </html>
