--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
    <br>      
       <a href="https://inkarnate.com/m/LmvzRz-nerau//"> <img src="img/Nerau.jpg"> </a>
 
+      <a href="jacuni.html"> Del 1</a>
    </body>
 </html>
