--- a/jacuni.html
+++ b/jacuni.html
@@ -8,7 +8,7 @@
     </head>
 <body class="map_body">
     <button id="knapp2" onclick="bytbild()"> Click me </button>
-    <div class="jacuni"> 
+    <div id="jacuni"> 
         <div class="white" id="ovan"> 
         </div>
 
