--- a/jacuni.html
+++ b/jacuni.html
@@ -34,10 +34,9 @@
         <div class="white" id="topleft"> 
         </div>
 
-        <div class="karta" id="karta"> </div>
+        <div class="karta" id="karta"> test</div>
 
     </div>
-   <p id="test">test</p>
     <script src="js/script.js"> </script>
 </body>
 </html>
