--- a/jacuni.html
+++ b/jacuni.html
@@ -34,9 +34,10 @@
         <div class="white" id="topleft"> 
         </div>
 
-        <div class="karta" id="karta"> test</div>
+        <div class="karta" id="karta"> </div>
 
     </div>
     <script src="js/script.js"> </script>
+    <script> </script>
 </body>
 </html>
