note to self... Fixa bytbild

--- a/jacuni.html
+++ b/jacuni.html
@@ -8,6 +8,7 @@
     </head>
 <body class="map_body">
     <button id="knapp2" onclick="bytbild()"> Click me </button>
+    <p>Klicka inte på knappen. Work in progress</p>
     <div id="jacuni"> 
         <div class="white" id="ovan"> 
         </div>
