--- a/jacuni.html
+++ b/jacuni.html
@@ -9,7 +9,7 @@
 <body class="map_body">
     <button id="knapp2" onclick="bytbild()"> Click me </button>
     <p>Klicka inte på knappen. Work in progress</p>
-    <div id="jacuni"> 
+    <div id="jacuni" class="jacuni"> 
         <div class="white" id="ovan"> 
         </div>
 
