--- a/lore/pers.html
+++ b/lore/pers.html
@@ -28,7 +28,10 @@
   <br>
      Sam Elarac näst äldsta son till Louc. Nuvarande ledare för house Elarac.
     <img src="../img/elven_lord.jpg" class="mas"> 
-
+    <br>
+    <br>
+    Aragax Sabli
+    <img src="../img/gax.jpg" class="mas">
   <br>
   <br>
      Pourekhnu, Platinum dragon, Exulars
