its working time

--- a/lore/pers.html
+++ b/lore/pers.html
@@ -37,8 +37,12 @@
     Aragax Sabli
     <br>
     <img src="../img/gax.jpg" class="mas">
-  <br>
-  <br>
+    <br>
+    <br>
+    Myrex
+    <img src="../img/myrex.jpg" class="mas">
+   <br>
+   <br>
      Pourekhnu, Platinum dragon, Exulars
   <br>
   <br>
