Eftersom Alvin klagade rättad version

--- a/jacuni.html
+++ b/jacuni.html
@@ -36,6 +36,8 @@
 
         <div class="karta" id="karta"> </div>
 
+        <div class="karta" id="karta2"> </div>
+
     </div>
     <script src="js/script.js"> </script>
     <script> </script>
