--- a/jacuni.html
+++ b/jacuni.html
@@ -34,10 +34,11 @@
         <div class="white" id="topleft"> 
         </div>
 
-        <div class="karta" id="karta"> </div>
+        <div id="karta">
+        <div class="karta"> </div>
 
-        <div class="karta" id="karta2"> </div>
-
+        <div class="karta2" > </div>
+        </div>
     </div>
     <script src="js/script.js"> </script>
     <script> </script>
