--- a/lore/obj.html
+++ b/lore/obj.html
@@ -67,6 +67,26 @@ The last one a regalia so the magic could be bind
         <br>
         Dessa tillsammans med exular regalian är de enda föremålen av admantine på hela sekai
 
+
+        Nedan är ett citat ifrån Kirakh Smrauts “Neraus metaller”, Kirakh Smraut är en välkänd smed, <br> berömd för exempelvis ringarna som används i Jacuni, Statyerna på fallna kungar i <br> huvudstaden, samt sina efterforskningar på kuni-järn och admantine.
+        <br>
+        <br>
+        “Det är något udda med [kuni-järn] det är onaturligt hårt redan från utvinningen, lättare, <br>
+        starkare, hårdare än vanligt järn eller ens stål. Utvinit ifrån Marakh [en gruvstad i nordöstra kuni-öarna], <br>
+        jag kan inte svara på processen som den utvinns eller vad som sker efteråt. Jag kommer ihåg när jag var ung, <br>
+        vi hade några år med att östra havet var stilla. Det var en gyllene tidsålder för smeder. <br>
+        Sen dess har det inte bara varit dyrbart men även svårt att få tag på i Nerau. 
+        <br>
+        <br>
+        En sak jag vet säkert är att [kuni-järn] inte är magiskt, dock verkar det vibrera svagt i samband med värme, som om det vaknade till liv.
+        <br>
+        <br>
+        [Admantine] dock, något helt annat men ändå identiskt, så vitt jag kan avgöra är det kuni-järn men inte ändå. <br>
+        Det är något onaturligt med dem. Något inte ifrån denna värld. Jag är både intresserad och avskräckt från det, <br>
+        samtidigt vill jag som smed, nästan avguda matrialet.”
+        
+
+
         </div>
    </body>
 </html>
